--- a/index.html
+++ b/index.html
@@ -7,15 +7,9 @@
   <title>West-Mec Aviation Matinence Technology</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-<<<<<<< Updated upstream
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="theme.css">
-  <link rel="stylesheet" href="cloudFlare-fonts.css">
-=======
   <link rel="stylesheet" href="style.css"/>
   <link rel="stylesheet" href="theme.css"/>
-  <link rel="stylesheet" href="iconsfonts.css"/>
->>>>>>> Stashed changes
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
   <!-- black image borders so that it can look cleaner, makes it look more together. Made in a style- the border of rgb black. -->
   <style>
     .pic {
@@ -271,7 +265,7 @@ it isnt blurry. It has a max and min height so that if the image isnt the exact 
       <a class="button large orange" href="javascript:void(0)" title="Facebook"><i class="fa fa-facebook"></i></a>
       <a class="button large orange" href="javascript:void(0)" title="Twitter"><i class="fa fa-twitter"></i></a>
       <a class="button large orange" href="javascript:void(0)" title="Google +"><i class="fa fa-google-plus"></i></a>
-      <a class="button large orange" href="javascript:void(0)" title="Google +"><i class="fa fa-instagram"></i></a>
+      <a class="button large orange" href="javascript:void(0)" title="Google +"><i class="fa fa-instagram" ></i></a>
       <a class="button large orange hide-small" href="javascript:void(0)" title="Linkedin"><i
           class="fa fa-linkedin"></i></a>
       <!-- This is the setion that send you to te top of the page -->
