--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   <title>West-Mec Aviation Matinence Technology</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="style.css"/>
-  <link rel="stylesheet" href="theme.css"/>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
-  <!-- black image borders so that it can look cleaner, makes it look more together. Made in a style- the border of rgb black. -->
+  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="theme.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <!-- orange image borders so that it can look cleaner, makes it look more together. Made in a style- the border of rgb. -->
   <style>
     .pic {
       border: 6px solid rgb(233, 117, 22);
@@ -22,7 +22,7 @@
 
   <!-- Sidebar on click -->
   <!-- This uses w3 style sheets to make it so that when you click on the + sign on the right it will open a nav bar on the side with links to many different places with info -->
-  <nav class="sidebar bar-block white card animate-left xxlarge" style="display:none;z-index:2" id="mySidebar">
+  <nav class="sidebar bar-block white card animate-left xxlarge" style="display:none;z-index:2;" id="mySidebar">
     <h1>OutSide Files</h1>
     <a href="javascript:void(0)" onclick="w3_close()" class="bar-item button display-topright text-orange">Close
       <i class="fa fa-remove"></i>
@@ -45,8 +45,8 @@
     then by clicking that it will bring you to the section thst you want. -->
   <div class="top">
     <div class="bar theme-d2 left-align">
-      <a class="bar-item button hide-medium hide-large right  theme-d2" href="javascript:void(0);"
-        onclick="openNav()"><i class="fa fa-bars"></i></a>
+      <a class="bar-item button hide-medium hide-large right theme-d2" href="javascript:void(0);" onclick="openNav()"><i
+          class="fa fa-bars"></i></a>
       <a href="#" class="bar-item button orange"><i class="fa fa-home margin-right"></i>Home</a>
       <a href="#team" class="bar-item button hide-small ">Team</a>
       <a href="#work" class="bar-item button hide-small ">About</a>
@@ -182,7 +182,7 @@ it isnt blurry. It has a max and min height so that if the image isnt the exact 
     <!-- in the side nav when you click the plus (+) sign what will pop up is extra documents and information that gives the 
       user some extra useful information for the west-mec aviation program, the ability to apply for the program and some more information of west-mec itself. -->
     <div class="container" style="position:relative">
-      <a onclick="w3_open()" class="button xlarge circle orange" style="position:absolute;top:-28px;right:24px">+</a>
+      <a onclick="w3_open()" class="button xlarge circle orange" style="position:absolute;top:-20px;right:24px;">+</a>
     </div>
 
     <!-- CTSO Row -->
@@ -265,7 +265,7 @@ it isnt blurry. It has a max and min height so that if the image isnt the exact 
       <a class="button large orange" href="javascript:void(0)" title="Facebook"><i class="fa fa-facebook"></i></a>
       <a class="button large orange" href="javascript:void(0)" title="Twitter"><i class="fa fa-twitter"></i></a>
       <a class="button large orange" href="javascript:void(0)" title="Google +"><i class="fa fa-google-plus"></i></a>
-      <a class="button large orange" href="javascript:void(0)" title="Google +"><i class="fa fa-instagram" ></i></a>
+      <a class="button large orange" href="javascript:void(0)" title="Google +"><i class="fa fa-instagram"></i></a>
       <a class="button large orange hide-small" href="javascript:void(0)" title="Linkedin"><i
           class="fa fa-linkedin"></i></a>
       <!-- This is the setion that send you to te top of the page -->
