--- a/index.html
+++ b/index.html
@@ -235,15 +235,15 @@ it isnt blurry. It has a max and min height so that if the image isnt the exact 
           The form doesn't acttully send the info anywhere though, just for the effect, design-->
         <div class="col m7">
           <form class="container card-2 padding-16 white" action="/action_page.php" target="_blank">
-            <div class="section">
+            <div class="padding-16">
               <label>Name</label>
               <input class="input" type="text" name="Name" id="name" required>
             </div>
-            <div class="section">
+            <div class="padding-16">
               <label>Email</label>
               <input class="input" type="text" name="Email" id="email" required>
             </div>
-            <div class="section">
+            <div class="padding-16">
               <label>Message</label>
               <input class="input" type="text" name="Message" id="message" required>
 
