--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 
   <!-- Navbar -->
   <!-- this is the top nav bar that it formated using w3 style sheets. the nav allows jumps down the page.
-    This is located at the top of the page above the home page. When you click on the part of the website that ypu want to go to 
-    then by clicking that it will bring you to the section thst you want. -->
+      This is located at the top of the page above the home page. When you click on the part of the website that ypu want to go to 
+      then by clicking that it will bring you to the section thst you want. -->
   <div class="top">
     <div class="bar theme-d2 left-align">
       <a class="bar-item button hide-medium hide-large right theme-d2" id="navIcon" onclick="openNav()"><i
@@ -56,9 +56,9 @@
 
     <!-- Navbar on small screens -->
     <!-- This uses the w3 style sheets to activate when the the screen is smaller to make the nav work better. 
-      So on moblie this will be more convinient.The website is built so that if you are useing a small screen then 
-      the website will shrink in size to fit perfectly to your screen. The website will still operate the same just the 
-      size will be different. -->
+          So on moblie this will be more convinient.The website is built so that if you are useing a small screen then 
+          the website will shrink in size to fit perfectly to your screen. The website will still operate the same just the 
+          size will be different. -->
     <div id="navSmall" class="bar-block theme-d2 hide hide-large hide-medium">
       <a href="#team" class="bar-item button">Team</a>
       <a href="#work" class="bar-item button">About</a>
@@ -87,9 +87,9 @@ it isnt blurry. It has a max and min height so that if the image isnt the exact 
 
       <div class="row"><br>
         <!-- this is all of the pictures and names of the teachers. Using the w3 style sheets they are separted into quarter and the picture are made into circles. 
-          There are also inline styles  -->
+                  There are also inline styles  -->
         <!-- teacher picture of Jay which it is saying his name and showing a piture with a time interval that when you click on his picture
-        it will show his occupation, what he does at he aviation program and his/her email, if the email cannot be retrieved then the west-mec email will be included. -->
+                it will show his occupation, what he does at he aviation program and his/her email, if the email cannot be retrieved then the west-mec email will be included. -->
         <div class="quarter">
           <img id="jayPic" src="capstone_pics/Jay McDowell.jpg" style="width:45%" class="circle hover-opacity img">
           <h3 id="jayTitle">Jay McDowell</h3>
@@ -97,9 +97,9 @@ it isnt blurry. It has a max and min height so that if the image isnt the exact 
               href="Jay.McDowell@west-mec.org">Jay.McDowell@west-mec.org</a></p>
         </div>
         <!-- teacher picture of Matthew saying his/her name and showing a piture of with the time interval design, that when you click on the image 
-  the picture that is flipped will last for 10 seconds. WHen the image is clicked the persons occupation will be showed along with what 
-  specific job the person teaches at the Aviation program. The persons email will be included in the time interval feature but if his/her email isnt 
-  able to be retrieved then the west-mec email will be put inplace. THe email and or the west-mec phone number-->
+          the picture that is flipped will last for 10 seconds. WHen the image is clicked the persons occupation will be showed along with what 
+          specific job the person teaches at the Aviation program. The persons email will be included in the time interval feature but if his/her email isnt 
+          able to be retrieved then the west-mec email will be put inplace. THe email and or the west-mec phone number-->
         <div class="quarter">
           <img src="capstone_pics/Matthew Still.jpg" id="matthewPic" style="width:45%" class="circle hover-opacity img">
           <h3 id="matthewTitle">Matthew Still</h3>
@@ -107,9 +107,9 @@ it isnt blurry. It has a max and min height so that if the image isnt the exact 
               href="matthew.still@west-mec.orgg">matthew.still@west-mec.org</a></p>
         </div>
         <!-- teacher picture of Tama saying his/her name and showing a piture of with the time interval design, that when you click on the image 
-        the picture that is flipped will last for 10 seconds. WHen the image is clicked the persons occupation will be showed along with what 
-        specific job the person teaches at the program. The ersons email will be included in the time interval feature but if his/her email isnt 
-        able to be retrieved then the west-mec email will be put inplace; and or a phone number -->
+                the picture that is flipped will last for 10 seconds. WHen the image is clicked the persons occupation will be showed along with what 
+                specific job the person teaches at the program. The ersons email will be included in the time interval feature but if his/her email isnt 
+                able to be retrieved then the west-mec email will be put inplace; and or a phone number -->
         <div class="quarter">
           <img src="capstone_pics/Tama Mohelnitzky.jpg" id="tamaPic" style="width:45%" class="circle hover-opacity img">
           <h3 id="tamaTitle">Tama Mohelnitzky</h3>
@@ -117,9 +117,9 @@ it isnt blurry. It has a max and min height so that if the image isnt the exact 
               href="tama.mohelnitzky@west-mec.org">tama.mohelnitzky@west-mec.org</a></p>
         </div>
         <!-- teacher picture of Terry Menees saying his/her name and showing a piture of with the time interval design, that when you click on the image 
-        the picture that is flipped will last for 10 seconds. WHen the image is clicked the persons occupation will be showed along with what 
-        specific job the person teaches at the program. The ersons email will be included in the time interval feature but if his/her email isnt 
-        able to be retrieved then the west-mec email will be put inplace; and or a west-mec phone number from the campus.-->
+                the picture that is flipped will last for 10 seconds. WHen the image is clicked the persons occupation will be showed along with what 
+                specific job the person teaches at the program. The ersons email will be included in the time interval feature but if his/her email isnt 
+                able to be retrieved then the west-mec email will be put inplace; and or a west-mec phone number from the campus.-->
         <div class="quarter">
           <img src="capstone_pics/Terry Menees.jpg" id="terryPic" style="width:45%" class="circle hover-opacity img">
           <h3 id="terryTitle">Terry Menees</h3>
@@ -129,10 +129,10 @@ it isnt blurry. It has a max and min height so that if the image isnt the exact 
 
       </div>
     </div>
-
-    <!-- Work row-->
-    <!-- This is the next part of the site that is foramted using the w3 stylesheets -->
-    <!-- This sort of explains to the reader of the website of what the person/ students will be doing and or learning in the aviation program. -->
+<!-- Work row-->
+<!-- This is the next part of the site that is foramted using the w3 stylesheets -->
+<!-- This sort of explains to the reader of the website of what the person/ students will be doing 
+      and or learning in the aviation program. -->
     <div class="row-padding padding-64 theme-l1" id="work">
       <!-- Useing the w3 style sheets this section of the page is divided into urters one for info the others for pictures -->
       <div class="quarter">
@@ -156,16 +156,8 @@ it isnt blurry. It has a max and min height so that if the image isnt the exact 
           </div>
         </div>
       </div>
-      <!-- pic -->
-      <div class="quarter">
-        <div class="card white">
-          <img class="pic" src="capstone_pics/AV_11.JPG" style="width:100%">
-          <div class="container">
 
-          </div>
-        </div>
-      </div>
-      <!-- pic -->
+      <!-- pic2 -->
       <div class="quarter">
         <div class="card white">
           <img class="pic" src="capstone_pics/080418-F-1954M-906 (1).JPG" style="width:100%">
@@ -174,7 +166,15 @@ it isnt blurry. It has a max and min height so that if the image isnt the exact 
           </div>
         </div>
       </div>
+      <!-- pic3 -->
+      <div class="quarter">
+        <div class="card white">
+          <img class="pic" src="capstone_pics/AV_11.JPG" style="width:100%">
+          <div class="container">
 
+          </div>
+        </div>
+      </div>
     </div>
 
     <!-- Container -->
@@ -224,8 +224,9 @@ it isnt blurry. It has a max and min height so that if the image isnt the exact 
             Glendale, AZ 85307</p>
           <p><i class="fa fa-phone text-orange xlarge"></i> <b>623-209-8070</b></p>
           <!-- This is an iframe holding a conection to google maps at the west mec central campus. 
-            The src of the link for the maps. THe user of the little map provided, you are able to see it fullscreen (optional) 
-            the map is made to be a sprecific size so that it fits in the container. With the map you can zoom in and see how to get there and such. It is linked with google maps.-->
+                      The src of the link for the maps. THe user of the little map provided, you are able to see it fullscreen (optional) 
+                      the map is made to be a sprecific size so that it fits in the container. With the map you can zoom in and see how 
+                      to get there and such. It is linked with google maps.-->
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3325.6720330141225!2d-112.29502618479842!3d33.53591168074957!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872b41030b775f07%3A0xca01072481b6137d!2s6997+N+Glen+Harbor+Blvd%2C+Glendale%2C+AZ+85307!5e0!3m2!1sen!2sus!4v1554757023961!5m2!1sen!2sus"
             width="300" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
