--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@ it isnt blurry. It has a max and min height so that if the image isnt the exact 
         <a class="button large orange hide-small" href="javascript:void(0)" title="Linkedin"><i
             class="fa fa-linkedin"></i></a>
       </div>
-      <!-- This is the setion that send you to te top of the page -->
+      <!-- This is the setion that send you to the top of the page -->
       <div style="position:relative;bottom:100px;z-index:1;" class="tooltip right">
         <span class="text padding orange hide-small">Go To Top</span>
         <a class="button theme" href="#myPage"><span class="xlarge size">
